--- a/index.html
+++ b/index.html
@@ -365,20 +365,20 @@ code {
           : 'default'
     });
   </script>
-<h2 id="%E3%81%93%E3%82%8D%E3%82%8A%E3%82%93">ころりん</h2>
+<link rel="stylesheet" href="style.css">
+<h1 id="%E3%81%93%E3%82%8D%E3%82%8A%E3%82%93">ころりん</h1>
 <img src = "Markdown_sprite\title.png" width = "500">
 <br>
 <br>
 <h2 id="%E7%9B%AE%E6%AC%A1">目次</h2>
 <ul>
-<li><a href="#jump-%E8%87%AA%E5%B7%B1%E7%B4%B9%E4%BB%8B">1. 自己紹介</a></li>
-<li><a href="#jump-%E4%BD%9C%E5%93%81%E6%A6%82%E8%A6%81">2. 作品概要</a></li>
-<li><a href="#jump-%E3%82%B2%E3%83%BC%E3%83%A0%E7%B4%B9%E4%BB%8B">3. ゲーム紹介</a><br>
-・ <a href="#jump-%E3%82%B2%E3%83%BC%E3%83%A0%E5%86%85%E5%AE%B9">ゲーム内容</a><br>
-・ <a href="#jump-%E3%83%AB%E3%83%BC%E3%83%AB">ルール</a><br>
-・ <a href="#jump-%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E">操作説明</a></li>
-<li><a href="#jump-%E3%81%93%E3%81%A0%E3%82%8F%E3%82%8A">4. こだわり</a></li>
-<li><a href="#jump-%E6%8A%80%E8%A1%93%E7%B4%B9%E4%BB%8B">5. 技術紹介</a></li>
+<li><a href="#1%E8%87%AA%E5%B7%B1%E7%B4%B9%E4%BB%8B">1. 自己紹介</a></li>
+<li><a href="#2%E4%BD%9C%E5%93%81%E6%A6%82%E8%A6%81">2. 作品概要</a></li>
+<li><a href="#3%E3%82%B2%E3%83%BC%E3%83%A0%E7%B4%B9%E4%BB%8B">3. ゲーム紹介</a><br>
+・ <a href="#1-%E3%82%B2%E3%83%BC%E3%83%A0%E5%86%85%E5%AE%B9">ゲーム内容</a><br>
+・ <a href="#2-%E3%83%AB%E3%83%BC%E3%83%AB">ルール</a><br>
+・ <a href="#3-%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E">操作説明</a></li>
+<li><a href="#4%E6%8A%80%E8%A1%93%E7%B4%B9%E4%BB%8B">4. 技術紹介</a></li>
 </ul>
 <h2 id="1%E8%87%AA%E5%B7%B1%E7%B4%B9%E4%BB%8B">1.自己紹介</h2>
 <h3 id="%E6%89%80%E5%B1%9E"><strong>所属</strong></h3>
@@ -389,7 +389,7 @@ code {
 <ul>
 <li>三好 爽太(みよし そうた)</li>
 </ul>
-<h2 id="2%E3%82%B2%E3%83%BC%E3%83%A0%E7%B4%B9%E4%BB%8B">2.ゲーム紹介</h2>
+<h2 id="2%E4%BD%9C%E5%93%81%E6%A6%82%E8%A6%81">2.作品概要</h2>
 <h3 id="%E3%82%BF%E3%82%A4%E3%83%88%E3%83%AB"><em>タイトル</em></h3>
 <p>ころりん</p>
 <h3 id="%E5%88%B6%E4%BD%9C%E4%BA%BA%E6%95%B0"><em>制作人数</em></h3>
@@ -419,17 +419,14 @@ code {
 <h3 id="%E3%83%90%E3%83%BC%E3%82%B8%E3%83%A7%E3%83%B3%E7%AE%A1%E7%90%86"><em>バージョン管理</em></h3>
 <p>Github,fork</p>
 <h3 id="github%E3%81%AEurl"><em>GitHubのURL</em></h3>
-<p>https://github.com/miyosisouta/ProjectKororin</p>
+<p><a href="https://example.com/" target="_blank">https://github.com/miyosisouta/ProjectKororin</a></p>
 <h3 id="%E5%8B%95%E7%94%BB%E3%83%AA%E3%83%B3%E3%82%AFyoutube"><em>動画リンク(youtube)</em></h3>
+<p><a href="https://example.com/" target="_blank">https://youtu.be/dcFpaZ94y3U</a></p>
 <h2 id="3%E3%82%B2%E3%83%BC%E3%83%A0%E7%B4%B9%E4%BB%8B">3.ゲーム紹介</h2>
-<ol>
-<li>ゲーム内容<br>
-ステージ上のオブジェクトを巻き込み塊を大きくする成長型アクションゲーム</li>
-</ol>
+<h4 id="1-%E3%82%B2%E3%83%BC%E3%83%A0%E5%86%85%E5%AE%B9">1. ゲーム内容</h4>
+<p>ステージ上のオブジェクトを巻き込み塊を大きくする成長型アクションゲーム</p>
 <hr>
-<ol start="2">
-<li>ルール</li>
-</ol>
+<h4 id="2-%E3%83%AB%E3%83%BC%E3%83%AB">2. ルール</h4>
 <ul>
 <li>街中のオブジェクトをくっつけることが出来る。<br>
 <img src = "Markdown_sprite\beforeAttach.png" width = "100">
@@ -440,7 +437,8 @@ code {
 <hr>
 <ul>
 <li>塊にはレベルが設定されている</li>
-<li>塊のレベルが足りないとき、オブジェクトに引っ付こうとするとはじかれる
+<li>塊のレベルが足りないとき、オブジェクトに引っ付こうとするとはじかれる<br>
+<br>
 <img src = "Markdown_movie\cantAttach.gif" width = "300">
 <br></li>
 </ul>
@@ -461,11 +459,9 @@ code {
 <img src = "Markdown_movie\sphereSizeTextUI.gif" width = "300"></li>
 </ul>
 <hr>
-<ol start="3">
-<li>操作説明<br>
+<h4 id="3-%E6%93%8D%E4%BD%9C%E8%AA%AC%E6%98%8E">3. 操作説明</h4>
 <br>
-<img src = "Markdown_sprite\OperationInstructions.png" width = "300"></li>
-</ol>
+<img src = "Markdown_sprite\OperationInstructions.png" width = "300">
 <h2 id="4%E6%8A%80%E8%A1%93%E7%B4%B9%E4%BB%8B">4.技術紹介</h2>
 <ol>
 <li>空間分割</li>
@@ -486,13 +482,14 @@ code {
 </ol>
 <ul>
 <li>Unityのエディタ拡張でオブジェクト配置とパラメータ設定を行い、JSON形式で書き出し。</li>
-<li>自作エンジンで読み込むことで、レベルデザインの効率を最大化しました。
+<li>自作エンジンで読み込むことで、レベルデザインの効率を最大化しました。<br>
+<br>
 <img src = "Markdown_sprite\UnityScript.png" width = "150">
 <img src = "Markdown_sprite\LightArrow.png" width = "100">
 <img src = "Markdown_sprite\json.png" width = "150"></li>
 </ul>
 <hr>
-<ol start="3">
+<ol>
 <li>吸着判定</li>
 </ol>
 <ul>
@@ -501,7 +498,8 @@ code {
 <li>逆行列とオブジェクトの行列を乗算</li>
 <li>オブジェクトのローカル行列と塊のワールド行列を乗算<br>
 　　　　　　　　　　↓<br>
-<strong>塊が原点のオブジェクトのワールド行列を求められる</strong>
+<strong>塊が原点のオブジェクトのワールド行列を求められる</strong><br>
+<br>
 <img src = "Markdown_sprite\CalcMatrix.png" width = "400"></li>
 </ul>
 <hr>
@@ -516,7 +514,7 @@ code {
 </ul>
 <hr>
 <ul>
-<li><a href="#jump-%E7%9B%AE%E6%AC%A1">目次</a></li>
+<li><a href="#jump-%E7%9B%AE%E6%AC%A1">目次に戻る</a></li>
 </ul>
 
 </body>
