--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@ code {
 <h3 id="%E3%83%90%E3%83%BC%E3%82%B8%E3%83%A7%E3%83%B3%E7%AE%A1%E7%90%86"><em>バージョン管理</em></h3>
 <p>Github,fork</p>
 <h3 id="github%E3%81%AEurl"><em>GitHubのURL</em></h3>
-<p><a href="https://example.com/" target="_blank">https://github.com/miyosisouta/ProjectKororin</a></p>
+<p><a href="https://github.com/miyosisouta/ProjectKororin" target="_blank">https://github.com/miyosisouta/ProjectKororin</a></p>
 <h3 id="%E5%8B%95%E7%94%BB%E3%83%AA%E3%83%B3%E3%82%AFyoutube"><em>動画リンク(youtube)</em></h3>
-<p><a href="https://example.com/" target="_blank">https://youtu.be/dcFpaZ94y3U</a></p>
+<p><a href="https://youtu.be/dcFpaZ94y3U" target="_blank">https://youtu.be/dcFpaZ94y3U</a></p>
 <h2 id="3%E3%82%B2%E3%83%BC%E3%83%A0%E7%B4%B9%E4%BB%8B">3.ゲーム紹介</h2>
 <h4 id="1-%E3%82%B2%E3%83%BC%E3%83%A0%E5%86%85%E5%AE%B9">1. ゲーム内容</h4>
 <p>ステージ上のオブジェクトを巻き込み塊を大きくする成長型アクションゲーム</p>
@@ -503,7 +503,7 @@ code {
 <img src = "Markdown_sprite\CalcMatrix.png" width = "400"></li>
 </ul>
 <hr>
-<ol start="4">
+<ol start="2">
 <li>オフスクリーンレンダリング</li>
 </ol>
 <ul>
