--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>ProjectKororin.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+<link rel="icon" href="fvicon.png" type="image/png">
 
 <style>
 /* https://github.com/microsoft/vscode/blob/master/extensions/markdown-language-features/media/markdown.css */
