--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <title>ProjectKororin.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<link rel="icon" href="fvicon.png" type="image/png">
 
 <style>
 /* https://github.com/microsoft/vscode/blob/master/extensions/markdown-language-features/media/markdown.css */
@@ -371,7 +370,6 @@ code {
 <head>
 <title>ポートフォリオ</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<link rel="icon" href="fvicon.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
 </head>
@@ -401,6 +399,11 @@ code {
 <p>
   <span style="border-bottom: 2px solid #5a57b5;">
   三好 爽太　(みよし そうた)</span>
+</p>
+<h3 id="%E3%83%A1%E3%83%BC%E3%83%AB%E3%82%A2%E3%83%89%E3%83%AC%E3%82%B9"><strong>メールアドレス</strong></h3>
+<p>
+  <span style="border-bottom: 2px solid #5a57b5;">
+  CA01244028@st.kawahara.ac.jp</span>
 </p>
 <h2 id="2%E4%BD%9C%E5%93%81%E6%A6%82%E8%A6%81">2.作品概要</h2>
 <h3 id="%E3%82%BF%E3%82%A4%E3%83%88%E3%83%AB"><em>タイトル</em></h3>
